# ympc

./: CMakeLists.txt  README.md  http_server.h  jmpd.1  pom.xml  ympc.1
contrib/: init.debian  jmpd.service  ympc.service  ympd.service
htdocs/: index.html
htdocs/css/: reg.css
htdocs/js/: reg.js
htdocs/mpd_disable/: mpd.js
htdocs/registry/: metadata
src/: config.h.in  http_server.c  mkdata.c  registry.c  registry.h  ympc.c
src/main/java/eu/jmpd/service/: ODataRegistryService.java
src/main/java/eu/jmpd/service/auth/: AuthService.java
src/main/java/eu/jmpd/service/impl/: Entity.java  JmpdDataStore.java  JmpdEdmProvider.java  JmpdODataSingleProcessor.java  JmpdServiceRegistry.java  Provider.java  SampleGenerator.java  Service.java
src/main/java/eu/jmpd/service/model/: Service.java
src/main/java/eu/jmpd/service/registry/: ServiceRegistry.java
src/main/java/eu/jmpd/service/util/: SampleDataGenerator.java
src/main/java/net/jmpd/service/auth/: AuthService.java
src/main/java/net/jmpd/service/model/: Service.java
src/main/java/net/jmpd/service/registry/: ServiceRegistry.java
src/main/java/net/jmpd/service/util/: SampleDataGenerator.java
src/main/java/service/model/: Base.java  Entity.java  Provider.java  Service.java
src/main/webapp/: generate_services.jsp  index.html  index.jsp  index_old.jsp
src/main/webapp/WEB-INF/: web.xml
src/main/webapp/js/: reg.js
src/mpd/: mpd_client.c  mpd_client.h
